--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: 'yourbot-token'
+token: '5734848437:AAE5M-Y-IcWAqJFqabAgTP_caGYCgSUI0Zs'
 blacklisted: '510805 434258 434256 601149 379248'
 prefix: '/!.'
 owner: 5388501342
